[package]
name = "sort-path-length"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/reinaldorauch/sort-path-length"
homepage = "https://reinaldorauch.dev.br/sort-path-length"
docuimentation = "https://reinaldorauch.dev.br/sort-path-length"
description = "Takes a file of paths and sort them by component length"
authors =["Reinaldo A. C. Rauch <reinaldorauch@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
